# raytracer21

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/dgap/: StainedGlass.mtl
examples/trumpet/: Trumpet.mtl
examples/ysda/: StainedGlass.mtl
src/geometry/: geometry.h  intersection.h  parameters.h  ray.h  sphere.h  triangle.h  vector.h
src/raytracer/: camera_options.h  illumination.h  image.h  raycaster.h  raytracer.cpp  raytracer.h  render_options.h  skybox.h
src/reader/: light.h  material.h  object.h  scene.h
src/scene/: light.h  material.h  object.h  reader.cpp  scene.h  skybox.h
tests/: CMakeLists.txt  auxiliary.hpp  catch.hpp  catch2_main_holder.cpp  test_geometry.cpp
tests/debug_mode/: CMakeLists.txt  test_debug_mode.cpp
tests/geometry/: CMakeLists.txt  test_geometry.cpp
tests/raytracer/: CMakeLists.txt  test_raytracer.cpp
tests/raytracer/scenes/colored_glass/: ColoredGlass.mtl
tests/raytracer/scenes/opaque_glass/: OpaqueGlass.mtl
tests/raytracer/scenes/simple_stained_glass/: SimpleStainedGlass.mtl
tests/raytracer/scenes/violin_case/: ViolinCase.mtl
tests/reader/: CMakeLists.txt  test_reader.cpp
